--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut mollitia rem nesciunt nam assumenda voluptate recusandae. Rerum maiores eaque ullam. Architecto, repellat ullam laborum repudiandae animi eaque voluptates hic qui.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut mollitia rem nesciunt nam assumenda voluptate recusandae. Rerum maiores eaque ullam. Architecto, repellat ullam laborum repudiandae animi eaque voluptates hic qui.</p>
 </body>
 </html>
